More todo. Debugging

--- a/todo
+++ b/todo
@@ -7,6 +7,7 @@
   - Changing the tuning of the guitar component does not result in the "reset tuning" button showing up immediately (It does after reloading though. Skill/state issue.)
   - Ghost note when a request gets made to update the "Total notes generated" count.
   - Right now, the theming for dark mode sucks so much that it seems broken.
+  - Don't have so many different states. Have a single state with an object. 
 
 # Do mode:
 
