--- a/todo
+++ b/todo
@@ -1,8 +1,8 @@
 ## Todo
 
-# BUGS!!!  
-  - Occasionally, the Guitar (and likely the bass) component does not show any notes being played. Other components do seem to have notes though. This seems to happen when deselecting the guitar component and reselecting it in the "Show me" control.
+# BUGS!!! 
   - Sharing isn't working as intended. Probably related to how storage is handled.   
+    - Could I just handle most of the state in the URL? 
   - Ghost note when a request gets made to update the "Total notes generated" count.
   - Right now, the theming for dark mode sucks so much that it seems broken.
   - Don't have so many different states. Have a single state with an object. 
