--- a/todo
+++ b/todo
@@ -1,33 +1,35 @@
-## Todo  
+# Todo now
+  ### Sounds 
+    - Record and save to mp3. 
+    - Add more instruments.  Ones that sound cool. The distorted guitar ones kinda suck.
+    - See about replacing the sound player with: https://github.com/danigb/smplr
   
-# Do mode:
+  ### Functionality
+    - Save multiple configurations you've enjoyed. Be able to load them up later.
+    - https://www.billionsofnotes.com/what-scale -> This could go back to the main page with the key and scale selected.  
+    - There are still some unnecessary rerenders happening especially around the instruments being played. I should be able to optimize this.
+    - Flat vs sharp mode. Make it an option. Options page, generally?
+    - A more in depth "These are the notes in this scale" mode. Show the whole and half steps.
+    - Allow a single note to ring over multiple indexes. Add this as a variable with randomness.
+    - Bass component: The tuning of bass guitars is strange because when it gets to 6 strings it doesn't just go lower. Cater for this.  
+    - Number of frets -> Make this a two way slider. 
+    - Allow single note items to be played as if they're tremolo'd.
+      - Add "Tremolo" as a variable. Tremolo X of the selected notes randomly.
+  
+  ### Style
+    - Improve the theme for dark mode
+    - Finish styling the new, improved fretboard. Invert the colors for the fretboard maybe? Make the playing notes bright and non playable notes dark. To make things more obvious
 
-- https://www.billionsofnotes.com/what-scale -> This could go back to the main page with the key and scale selected.
-- Improve the theme for dark mode
-- There are still some unnecessary rerenders happening especially around the instruments being played. I should be able to optimize this.
-- The notes being played overlap in some views. 
-- Give me a second verse with these notes -> This could use the same notes but maybe change the last note to something else?
+# Maybe later: 
+  - Get the count stuff back and have it not cause a render. 
+  - Add many more random interactive messages. Make this more prominent and obvious.
+  - "Show me how to play this"/Import Midi. The fretboard is pretty cool. Having a way to import a midi file and then show you how to play it would be awesome. 
+    - Add some sort of  "Don't play stuff... I'm just looking at the fretboard" mode. (Continue with ShowMe.js)
+  - For any scale, when hovering over the notes on the fretboard, show the relationship that note has with the root note. (Minor third, Perfect 5th, etc)
+  - Give me a second verse with these notes -> This could use the same notes but maybe change the last note to something else?
   - "I like these notes, Give me a variation" -> Use the current notes but jiggle them around
   - At least add a duplicate? This would double up the number of notes and empty notes.
-- For any scale, when hovering over the notes on the fretboard, show the relationship that note has with the root note. (Minor third, Perfect 5th, etc)
-- Flat vs sharp mode. Make it an option. Options page, generally?
-- Number of frets -> Make this a two way slider. 
-- Add more instruments.  Ones that sound cool. The distorted guitar ones kinda suck.
-- Allow single note items to be played as if they're tremolo'd.
-  - Add "Tremolo" as a variable. Tremolo X of the selected notes randomly.
-- Record and save to mp3. 
-- "Show me how to play this"/Import Midi. The fretboard is pretty cool. Having a way to import a midi file and then show you how to play it would be awesome. 
-  - Add some sort of  "Don't play stuff... I'm just looking at the fretboard" mode. (Continue with ShowMe.js)
-- See about replacing the sound player with: https://github.com/danigb/smplr
-- Get the count stuff back. 
-- Add many more random interactive messages. Make this more prominent and obvious.
-- Finish styling the new, improved fretboard.
-  - Invert the colors for the fretboard maybe? Make the playing notes bright and non playable notes dark. To make things more obvious
-- A more in depth "These are the notes in this scale" mode. Show the whole and half steps.
-- Bass component: The tuning of bass guitars is strange because when it gets to 6 strings it doesn't just go lower. Cater for this.  
-- Save multiple configurations you've enjoyed. Be able to load them up later.
-- Chords. Chords that make sense in the context of the current notes.
-- Allow a single note to ring over multiple indexes. Add this as a variable with randomness.
-- More interesting visualizations of the generated notes. Perhaps the pattern followed on the current fretboard?
-- Add a circle of 5ths
-- Add a vertical piano roll with the notes coming down from the top.
+  - Chords. Chords that make sense in the context of the current notes.
+  - More interesting visualizations of the generated notes. Perhaps the pattern followed on the current fretboard?
+  - Add a circle of 5ths
+  - Add a vertical piano roll with the notes coming down from the top.
