--- a/todo
+++ b/todo
@@ -1,7 +1,7 @@
 # Todo now
 
 x Add a ukelele instrument. 
-- Make "Tie notes" tie the actual notes together visually. 
+x Make "Tie notes" tie the actual notes together visually. 
 x Add more instruments.  Ones that sound cool. The distorted guitar ones kinda suck.
 - Flat vs sharp mode. Make it an option. Options page, generally?
 - Piano uses flats when the rest of the app uses sharps. 
